--- a/package.json
+++ b/package.json
@@ -10,6 +10,9 @@
     "@heroicons/react": "^1.0.6",
     "@tailwindcss/aspect-ratio": "^0.4.0",
     "@tailwindcss/forms": "^0.5.0",
+    "@walletconnect/web3-provider": "^1.7.5",
+    "@web3auth/web3auth": "^0.6.2",
+    "magic-sdk": "^8.1.0",
     "moralis": "^1.5.4",
     "next": "latest",
     "react": "^17.0.2",
