--- a/package.json
+++ b/package.json
@@ -6,18 +6,25 @@
     "start": "next start"
   },
   "dependencies": {
+    "@apollo/client": "^3.5.10",
     "@headlessui/react": "^1.5.0",
     "@heroicons/react": "^1.0.6",
     "@tailwindcss/aspect-ratio": "^0.4.0",
     "@tailwindcss/forms": "^0.5.0",
+    "@types/react-select-country-list": "^2.2.0",
     "@walletconnect/web3-provider": "^1.7.5",
     "@web3auth/web3auth": "^0.6.2",
+    "ethers": "^5.6.1",
     "magic-sdk": "^8.1.0",
     "moralis": "^1.5.4",
     "next": "latest",
+    "next-eth": "^0.0.5",
+    "omit-deep": "^0.3.0",
     "react": "^17.0.2",
     "react-dom": "^17.0.2",
-    "react-moralis": "^1.3.2"
+    "react-moralis": "^1.3.2",
+    "react-select": "^5.2.2",
+    "react-select-country-list": "^2.2.3"
   },
   "devDependencies": {
     "@types/node": "17.0.4",
