--- a/package.json
+++ b/package.json
@@ -7,24 +7,32 @@
   },
   "dependencies": {
     "@apollo/client": "^3.5.10",
+    "@daily-co/daily-js": "^0.23.0",
+    "@daily-co/daily-react-hooks": "^0.1.0",
     "@headlessui/react": "^1.5.0",
     "@heroicons/react": "^1.0.6",
+    "@livepeer/webrtmp-sdk": "^0.2.3",
     "@tailwindcss/aspect-ratio": "^0.4.0",
     "@tailwindcss/forms": "^0.5.0",
     "@types/react-select-country-list": "^2.2.0",
     "@walletconnect/web3-provider": "^1.7.5",
     "@web3auth/web3auth": "^0.6.2",
+    "axios": "^0.26.1",
     "ethers": "^5.6.1",
+    "graphql": "^16.3.0",
     "magic-sdk": "^8.1.0",
     "moralis": "^1.5.4",
     "next": "latest",
     "next-eth": "^0.0.5",
     "omit-deep": "^0.3.0",
     "react": "^17.0.2",
+    "react-country-dropdown": "^1.0.4",
     "react-dom": "^17.0.2",
     "react-moralis": "^1.3.2",
     "react-select": "^5.2.2",
-    "react-select-country-list": "^2.2.3"
+    "react-select-country-list": "^2.2.3",
+    "recoil": "^0.6.1",
+    "styled-components": "^5.3.3"
   },
   "devDependencies": {
     "@types/node": "17.0.4",
