--- a/package.json
+++ b/package.json
@@ -28,6 +28,7 @@
     "react": "^17.0.2",
     "react-country-dropdown": "^1.0.4",
     "react-dom": "^17.0.2",
+    "react-is": "^17.0.2",
     "react-moralis": "^1.3.2",
     "react-select": "^5.2.2",
     "react-select-country-list": "^2.2.3",
