--- a/package.json
+++ b/package.json
@@ -32,8 +32,10 @@
     "react-moralis": "^1.3.2",
     "react-select": "^5.2.2",
     "react-select-country-list": "^2.2.3",
+    "react-use": "^17.3.2",
     "recoil": "^0.6.1",
-    "styled-components": "^5.3.3"
+    "styled-components": "^5.3.3",
+    "video.js": "^7.18.1"
   },
   "devDependencies": {
     "@types/node": "17.0.4",
