--- a/package.json
+++ b/package.json
@@ -20,6 +20,7 @@
     "axios": "^0.26.1",
     "ethers": "^5.6.1",
     "graphql": "^16.3.0",
+    "javascript-time-ago": "^2.3.13",
     "magic-sdk": "^8.1.0",
     "moralis": "^1.5.4",
     "next": "latest",
