--- a/package.json
+++ b/package.json
@@ -31,6 +31,7 @@
     "react-dom": "^17.0.2",
     "react-is": "^17.0.2",
     "react-moralis": "^1.3.2",
+    "react-number-format": "^4.9.1",
     "react-select": "^5.2.2",
     "react-select-country-list": "^2.2.3",
     "react-use": "^17.3.2",
